--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
+    <h1>Hello World</h1>
     <!-- Learn to code by watching others
 
   See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
