--- a/index.html
+++ b/index.html
@@ -17,8 +17,17 @@
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <!-- Learn to code by watching others
+    <section class="intro-text">
+      <h1>Learn to code by watching others</h1>
+
+      <p>
+        See how experienced developers solve problems in real-time. Watching
+        scripted tutorials is great, but understanding how developers think is
+        invaluable.
+      </p>
+    </section>
+    <section class="intro-form"></section>
+    <!-- 
 
   See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
   but understanding how developers think is invaluable. 
