--- a/index.html
+++ b/index.html
@@ -26,28 +26,25 @@
         invaluable.
       </p>
     </section>
-    <section class="intro-form"></section>
-    <!-- 
+    <section class="intro-form">
+      <div class="intro-banner">
+        <p>Try it free 7 days then $20/mo. thereafter</p>
+      </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+      <div class="form-container">
+        <form>
+          <input type="text" name="firstName" placeholder="First Name" />
+          <input type="text" name="lastName" placeholder="Last Name" />
+          <input type="email" name="firstName" placeholder="Email Address" />
+          <input type="password" name="password" placeholder="Password" />
+          <button>Claim your free trial</button>
+        </form>
 
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
+        <p>
+          By clicking the button, you are agreeing to our
+          <span>Terms and Services</span>
+        </p>
+      </div>
+    </section>
   </body>
 </html>
