--- a/index.html
+++ b/index.html
@@ -17,54 +17,60 @@
     <title>Frontend Mentor | Intro component with sign up form</title>
   </head>
   <body>
-    <section class="intro-text">
-      <h1>Learn to code by watching others</h1>
-
-      <p>
-        See how experienced developers solve problems in real-time. Watching
-        scripted tutorials is great, but understanding how developers think is
-        invaluable.
-      </p>
-    </section>
-    <section class="intro-form">
-      <div class="intro-banner">
-        <p>Try it free 7 days then $20/mo. thereafter</p>
-      </div>
-
-      <div class="form-container">
-        <form class="form">
-          <div class="form-group">
-            <input type="text" name="firstName" placeholder="First Name" />
-            <p>First Name cannot be empty</p>
-            <img src="./assets/images/icon-error.svg" alt="Error Icon" />
-          </div>
-
-          <div class="form-group">
-            <input type="text" name="lastName" placeholder="Last Name" />
-            <p>Last Name cannot be empty</p>
-            <img src="./assets/images/icon-error.svg" alt="Error Icon" />
-          </div>
-
-          <div class="form-group">
-            <input type="email" name="firstName" placeholder="Email Address" />
-            <p>Looks like this is not email</p>
-            <img src="./assets/images/icon-error.svg" alt="Error Icon" />
-          </div>
-
-          <div class="form-group">
-            <input type="password" name="password" placeholder="Password" />
-            <p>Password cannot be empty</p>
-            <img src="./assets/images/icon-error.svg" alt="Error Icon" />
-          </div>
-
-          <button>Claim your free trial</button>
-        </form>
+    <main>
+      <section class="intro-text">
+        <h1>Learn to code by watching others</h1>
 
         <p>
-          By clicking the button, you are agreeing to our
-          <span>Terms and Services</span>
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
         </p>
-      </div>
-    </section>
+      </section>
+      <section class="intro-form">
+        <div class="intro-banner">
+          <p>Try it free 7 days then $20/mo. thereafter</p>
+        </div>
+
+        <div class="form-container">
+          <form class="form">
+            <div class="form-group">
+              <input type="text" name="firstName" placeholder="First Name" />
+              <p>First Name cannot be empty</p>
+              <img src="./assets/images/icon-error.svg" alt="Error Icon" />
+            </div>
+
+            <div class="form-group">
+              <input type="text" name="lastName" placeholder="Last Name" />
+              <p>Last Name cannot be empty</p>
+              <img src="./assets/images/icon-error.svg" alt="Error Icon" />
+            </div>
+
+            <div class="form-group">
+              <input
+                type="email"
+                name="firstName"
+                placeholder="Email Address"
+              />
+              <p>Looks like this is not email</p>
+              <img src="./assets/images/icon-error.svg" alt="Error Icon" />
+            </div>
+
+            <div class="form-group">
+              <input type="password" name="password" placeholder="Password" />
+              <p>Password cannot be empty</p>
+              <img src="./assets/images/icon-error.svg" alt="Error Icon" />
+            </div>
+
+            <button>Claim your free trial</button>
+          </form>
+
+          <p>
+            By clicking the button, you are agreeing to our
+            <span>Terms and Services</span>
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
