--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </section>
       <section class="intro-form">
         <div class="intro-banner">
-          <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
+          <h2><span>Try it free 7 days</span> then $20/mo. thereafter</h2>
         </div>
 
         <div class="form-container">
